<resources>
    <string name="app_name">CurrencyCalcForOlderPeople</string>
    <string name="updateButtonText">Update</string>
    <string name="settingsButtonText">Settings</string>
    <string name="customButtonText">Custom</string>
    <string name="urlLink">http://api.nbp.pl/api/exchangerates/tables/A?format=json</string>
    <string name="currenciesFileName">currencies</string>
    <string name="connectionTitle">Connection failure</string>
    <string name="connectionMessage">You do not have connection with the internet. Please check your internet connection and try again.</string>
    <string name="numberPrecision">Number precision</string>
    <string name="fontSize">Font size</string>
    <string name="language">Language</string>
    <string name="informations">Informations</string>
    <string name="headerTitle">Options</string>
    <string name="chooseNumberPrecision">Choose number precision</string>
    <string name="chooseLanguage">Choose language</string>
    <string name="connection">Internet</string>
    <string name="information">Information</string>
    <string name="information_message">This application was made by Kamil Kryus due to project in Silesian University of Technology in Gliwice. </string>
    <string name="justWifi">Just wifi</string>
    <string name="all">Wifi and mobile data</string>
    <string name="allCurrencies">Choose currency</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
</resources>
