<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.kamil.currencycalcforolderpeople.MainActivity">

    <View
        android:id="@+id/calculatorWrappingRectangleView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/calculator_wrapping_rectangle" />

    <View
        android:id="@+id/calculatorWrappingBorder"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignEnd="@+id/outputEditText"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/inputEditText"
        android:layout_marginTop="14dp"
        android:background="@drawable/calculator_wrapping_border" />

    <ImageButton
        android:id="@+id/firstFlagButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/calculatorWrappingBorder"
        android:layout_alignStart="@+id/calculatorWrappingBorder"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        app:srcCompat="@drawable/poland_flag" />

    <Button
        android:id="@+id/firstShortcutButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/calculatorWrappingBorder"
        android:layout_alignTop="@+id/calculatorWrappingBorder"
        android:layout_toEndOf="@+id/firstFlagButton"
        android:background="@android:color/transparent"
        android:text="PLN" />

    <Button
        android:id="@+id/secondShortcutButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/calculatorWrappingBorder"
        android:layout_alignTop="@+id/calculatorWrappingBorder"
        android:layout_toStartOf="@+id/secondFlagButton"
        android:background="@android:color/transparent"
        android:text="PLN" />

    <ImageButton
        android:id="@+id/secondFlagButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/calculatorWrappingBorder"
        android:layout_alignTop="@+id/firstFlagButton"
        android:layout_marginEnd="14dp"
        app:srcCompat="@drawable/poland_flag" />

    <ImageButton
        android:id="@+id/replaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/calculatorWrappingBorder"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@null"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_exchange" />

    <View
        android:id="@+id/calculatorRectangleView"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/calculatorWrappingRectangleView"
        android:background="@drawable/calculator_rectangle" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/calculatorRectangleView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="30dp"
        android:background="#c7c8c9"

        android:imeOptions="actionDone"
        android:cursorVisible="false"
        android:ems="5"
        android:inputType="number"
        android:text="1" />

    <EditText
        android:id="@+id/outputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputEditText"
        android:layout_alignBottom="@+id/inputEditText"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/replaceButton"
        android:focusable="false"
        android:background="#c7c8c9"
        android:ems="5"
        android:inputType="number" />

    <View
        android:id="@+id/buttonsRectangleView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/settingsButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputEditText"
        android:layout_weight="1"
        android:background="@drawable/calculator_wrapping_rectangle" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/calculatorRectangleView"
        android:background="?selectableItemBackground"
        android:text="@string/settingsButtonText" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputEditText"
        android:layout_centerHorizontal="true"
        android:background="?selectableItemBackground"
        android:text="@string/updateButtonText" />

    <Button
        android:id="@+id/customButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputEditText"
        android:layout_toEndOf="@+id/updateButton"
        android:background="?selectableItemBackground"
        android:text="@string/customButtonText" />

    <ImageButton
        android:id="@+id/cleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/outputEditText"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/icon_clear" />

    <ListView
        android:id="@+id/favoriteListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settingsButton" />

</RelativeLayout>
